Atualizando experiências e participações

--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -84,7 +84,7 @@
         </div>
 
         <div class="border-bottom border-2 border-print-0 border-dark mb-5 pb-5 pb-print-0 mb-print-1">
-            <h2 class="mb-4">Professional Experience</h2>
+            <h2 class="mb-4">Experiência Profissional</h2>
             {{#each positions}}
             <div class="row d-block d-md-flex{{#unless @last}} mb-5{{/unless}}">
                 <div class="col-md-2 pt-1">
@@ -107,10 +107,11 @@
 
         <div class="border-bottom border-2 border-print-0 border-dark mb-5 pb-5 pb-print-0 mb-print-1">
             <h2 class="mb-4">Education</h2>
-            <div>King Edward VI Grammar School in Stratford-upon-Avon [1571 - 1578]</div>
+            <div>Defesa Cibernética - Faculdade de Informática e Administração Paulista - FIAP [2022]</div>
+            <div>Bacharel em Oceanografia - Universidade do Federal do Espírito Santo - UFES [2018]</div>
         </div>
 
-        <h2 class="mb-4">Additional Experience</h2>
+        <h2 class="mb-4">Experiência Adicional</h2>
 
         {{#each experience}}
         <div class="mb-4">
