--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -111,6 +111,19 @@
             <div>Bacharel em Oceanografia - Universidade do Federal do Espírito Santo - UFES [2018]</div>
         </div>
 
+        <div class="border-bottom border-2 border-print-0 border-dark mb-5 pb-5 pb-print-0 mb-print-1">
+            <h2 class="mb-4">Certificações, Cursos e outros</h2>
+            <div>Novo Pentester Profissional e Pentester Experience - DESEC</div>
+            <div>OPSEC - Inteligência Cibernética na Prática - Vinicius Vieira</div>
+            <div>Complete Beginner Learning Path- TryHackMe</div>
+            <div>OWASP - Padrão de Verificação de segurança de aplicações e top ten - Alura</div>
+            <div>Certificado de Qualificação Profissional em CiberSegurança - FIAP</div>
+            <div>Certificado de Qualificação  Profissional em Gestão de Segurança da Informação - FIAP</div>
+            <div>A Nova Geração em Pentest Profissional - DeSec</div>
+            <div>Introduction to Cybersecurity - CISCO</div>
+        </div>
+
+
         <h2 class="mb-4">Experiência Adicional</h2>
 
         {{#each experience}}
@@ -124,6 +137,8 @@
                 <span class="badge text-body border border-1">{{ this }}</span>
                 {{/each}}
             </div>
+           
+               
         </div>
         {{/each}}
     </div>
