--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -112,15 +112,37 @@
         </div>
 
         <div class="border-bottom border-2 border-print-0 border-dark mb-5 pb-5 pb-print-0 mb-print-1">
-            <h2 class="mb-4">Certificações, Cursos e outros</h2>
-            <div>Novo Pentester Profissional e Pentester Experience - DESEC</div>
-            <div>OPSEC - Inteligência Cibernética na Prática - Vinicius Vieira</div>
-            <div>Complete Beginner Learning Path- TryHackMe</div>
-            <div>OWASP - Padrão de Verificação de segurança de aplicações e top ten - Alura</div>
-            <div>Certificado de Qualificação Profissional em CiberSegurança - FIAP</div>
-            <div>Certificado de Qualificação  Profissional em Gestão de Segurança da Informação - FIAP</div>
-            <div>A Nova Geração em Pentest Profissional - DeSec</div>
-            <div>Introduction to Cybersecurity - CISCO</div>
+            <h2 class="mb-4">Certificações</h2>
+            <div> 
+                <ul>
+                    <li>
+                        <a href="https://desecsecurity.com/curso/novo-pentest-profissional">Novo Pentester Profissional e Pentester Experience - DESEC
+                    </a></li>
+                    <li>
+                        <a href="https://hotmart.com/pt-br/marketplace/produtos/curso-de-inteligencia-cibernetica-com-vinicius-vieira/J81793434W"> OPSEC - Inteligência Cibernética na Prática - Vinicius Vieira</a>
+                    </li>
+                    <li>
+                        <a href="https://tryhackme.com/">Complete Beginner Learning Path- TryHackMe</a>
+                    </li>
+                    <li>
+                        <a href="https://alura.com.br">OWASP - Padrão de Verificação de segurança de aplicações e top ten - Alura</a>
+                    </li>
+                    <li>
+                        <a href="https://www.fiap.com.br/graduacao/tecnologo/defesa-cibernetica/">Certificado de Qualificação Profissional em CiberSegurança - FIAP</a>
+                    </li>
+                    <li>
+                        <a href="https://www.fiap.com.br/graduacao/tecnologo/defesa-cibernetica/">Certificado de Qualificação  Profissional em Gestão de Segurança da Informação - FIAP</a>
+                    </li>
+                    <li>
+                        <a href="https://desecsecurity.com/curso/introducao-pentest">A Nova Geração em Pentest Profissional - DeSec</a>
+                    </li>
+                    <li>
+                        <a href="https://www.netacad.com/courses/cybersecurity/introduction-cybersecurity">Introduction to Cybersecurity - CISCO</a>
+                    </li>
+
+                </ul>
+            </div>
+            
         </div>
 
 
