--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -53,23 +53,10 @@
             </div>
         </div>
 
-        <div class="border-bottom border-2 border-print-0 border-dark mb-5 pb-5 pb-print-0 mb-print-1">
-            <h3 class="h2 screen mb-4">Skills</h3>
-            <div class="row align-items-center">
-                {{#each skills}}
-                <div class="col-print-1 col-3 col-md-2 col-lg-1 text-right">
-                    <small>{{ this.[0] }}</small>
-                </div>
-                <div class="col-print-1 col-3 col-md-2 col-lg-1">
-                    <div class="skills">
-                        <div class="skills-bar" style="width: {{ this.[1] }}%"></div>
-                    </div>
-                </div>
-                {{/each}}
-            </div>
-        </div>
+
 
         <div class="border-bottom border-2 border-print-0 border-dark mb-5 pb-5 pb-print-0 mb-print-1">
+            <h2 class="mb-4">Resumo</h2>
             Graduado em defesa cibernética pela FIAP. Experiência no campo de segurança, proficiente em testes de
             segurança ofensiva (infraestrutura e web) e análise de vulnerabilidades; usando técnicas de invasão,
             análise de riscos e confecção de relatórios sobre vulnerabilidades e suas respectivas mitigações.
@@ -106,7 +93,7 @@
         </div>
 
         <div class="border-bottom border-2 border-print-0 border-dark mb-5 pb-5 pb-print-0 mb-print-1">
-            <h2 class="mb-4">Education</h2>
+            <h2 class="mb-4">Formação</h2>
             <div>Defesa Cibernética - Faculdade de Informática e Administração Paulista - FIAP [2022]</div>
             <div>Bacharel em Oceanografia - Universidade do Federal do Espírito Santo - UFES [2018]</div>
         </div>
@@ -145,6 +132,21 @@
             
         </div>
 
+        <div class="border-bottom border-2 border-print-0 border-dark mb-5 pb-5 pb-print-0 mb-print-1">
+            <h3 class="h2 screen mb-4">Skills</h3>
+            <div class="row align-items-center">
+                {{#each skills}}
+                <div class="col-print-1 col-3 col-md-2 col-lg-1 text-right">
+                    <small>{{ this.[0] }}</small>
+                </div>
+                <div class="col-print-1 col-3 col-md-2 col-lg-1">
+                    <div class="skills">
+                        <div class="skills-bar" style="width: {{ this.[1] }}%"></div>
+                    </div>
+                </div>
+                {{/each}}
+            </div>
+        </div>
 
         <h2 class="mb-4">Experiência Adicional</h2>
 
@@ -159,10 +161,12 @@
                 <span class="badge text-body border border-1">{{ this }}</span>
                 {{/each}}
             </div>
-           
-               
+                          
         </div>
         {{/each}}
+    
+
+        
     </div>
 </body>
 
