Ajustes de texto Resumo

--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -63,8 +63,8 @@
             Entregou projetos na implementação de processos de resposta a incidentes e inteligência de ameaças.
             Tenho experiência em avaliar a maturidade cibernética em diferentes frameworks (LGPD, ISF, NIST e CIS),
             auditando o cumprimento de regulamentos de segurança cibernética como SUSEP, BACEN e padrões
-            como ISO 27K. Tenho experiência em análise e processamento de dados usando Python, com as
-            bibliotecas de Data Science no pacote anaconda. Formado em oceanografia, tenho experiência na
+            como ISO 27K. Experiência em análise e processamento de dados usando Python, com as
+            bibliotecas de Data Science no pacote anaconda. Formado em oceanografia, atuou na
             preparação de relatórios técnicos, responsável por entregar e apresentar dados qualificados e
             experiência como coordenador de projetos na área.
             
