--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -61,7 +61,7 @@
             segurança ofensiva (infraestrutura e web) e análise de vulnerabilidades; usando técnicas de invasão,
             análise de riscos e confecção de relatórios sobre vulnerabilidades e suas respectivas mitigações.
             Entregou projetos na implementação de processos de resposta a incidentes e inteligência de ameaças.
-            Tenho experiência em avaliar a maturidade cibernética em diferentes frameworks (LGPD, ISF, NIST e CIS),
+            Experiência em avaliar a maturidade cibernética em diferentes frameworks (LGPD, ISF, NIST e CIS),
             auditando o cumprimento de regulamentos de segurança cibernética como SUSEP, BACEN e padrões
             como ISO 27K. Experiência em análise e processamento de dados usando Python, com as
             bibliotecas de Data Science no pacote anaconda. Formado em oceanografia, atuou na
@@ -109,10 +109,10 @@
                         <a href="https://hotmart.com/pt-br/marketplace/produtos/curso-de-inteligencia-cibernetica-com-vinicius-vieira/J81793434W"> OPSEC - Inteligência Cibernética na Prática - Vinicius Vieira</a>
                     </li>
                     <li>
-                        <a href="https://tryhackme.com/">Complete Beginner Learning Path- TryHackMe</a>
+                        <a href="https://tryhackme.com/path/outline/beginner">Complete Beginner Learning Path- TryHackMe</a>
                     </li>
                     <li>
-                        <a href="https://alura.com.br">OWASP - Padrão de Verificação de segurança de aplicações e top ten - Alura</a>
+                        <a href="https://www.alura.com.br/formacao-owasp">OWASP - Padrão de Verificação de segurança de aplicações e top ten - Alura</a>
                     </li>
                     <li>
                         <a href="https://www.fiap.com.br/graduacao/tecnologo/defesa-cibernetica/">Certificado de Qualificação Profissional em CiberSegurança - FIAP</a>
@@ -131,6 +131,30 @@
             </div>
             
         </div>
+
+        <div class="border-bottom border-2 border-print-0 border-dark mb-5 pb-5 pb-print-0 mb-print-1">
+            <h2 class="mb-4">Experiência Voluntária</h2>
+            {{#each positions2}}
+            <div class="row d-block d-md-flex{{#unless @last}} mb-5{{/unless}}">
+                <div class="col-md-2 pt-1">
+                    {{ period }}
+                </div>
+                <div class="col-md-10">
+                    <h3 class="fs-4 fw-normal">{{ title }}</h3>
+
+                    <div>{{{markdown contents }}}</div>
+
+                    <p>
+                        {{#each skills }}
+                        <span class="badge text-body border border-1">{{ this }}</span>
+                        {{/each}}
+                    </p>
+                </div>
+            </div>
+            {{/each}}
+        </div>
+
+
 
         <div class="border-bottom border-2 border-print-0 border-dark mb-5 pb-5 pb-print-0 mb-print-1">
             <h3 class="h2 screen mb-4">Skills</h3>
