Add Sentinel One

--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -59,7 +59,9 @@
             <h2 class="mb-4">Resumo</h2>
             Graduado em defesa cibernética pela FIAP. Experiência no campo de segurança, proficiente em testes de
             segurança ofensiva (infraestrutura e web) e análise de vulnerabilidades; usando técnicas de invasão,
-            análise de riscos e confecção de relatórios sobre vulnerabilidades e suas respectivas mitigações.
+            análise de riscos e confecção de relatórios sobre vulnerabilidades e suas respectivas mitigações. Experiência
+            na implementação e gerenciamento de Sistemas de Operações de Segurança (SOC) utilizando a plataforma SentinelOne 
+            para proteção avançada contra ameaças cibernéticas.
             Entregou projetos na implementação de processos de resposta a incidentes e inteligência de ameaças.
             Experiência em avaliar a maturidade cibernética em diferentes frameworks (LGPD, ISF, NIST e CIS),
             auditando o cumprimento de regulamentos de segurança cibernética como SUSEP, BACEN e padrões
