--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -96,6 +96,7 @@
 
         <div class="border-bottom border-2 border-print-0 border-dark mb-5 pb-5 pb-print-0 mb-print-1">
             <h2 class="mb-4">Formação</h2>
+            <div>Pós Ethical Hacking & Cybersecurity - VINCIT [2024]</div>
             <div>Defesa Cibernética - Faculdade de Informática e Administração Paulista - FIAP [2022]</div>
             <div>Bacharel em Oceanografia - Universidade do Federal do Espírito Santo - UFES [2018]</div>
         </div>
